// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary correctly with expenses 1`] = `
<h3>
  Viewing 
  3
   expense(s) totaling
   
  $1.00
</h3>
`;

exports[`should render ExpensesSummary correctly with no expenses 1`] = `
<h3>
  Viewing 
   expense(s) totaling
   
  $0.00
</h3>
`;
